// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarPageBody component Basic Version Should match snapshot 1`] = `
.c0 {
  margin-left: 300px;
  min-height: 10px;
}

<styled.div
  sideBarShown={true}
>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "sc-bdVaJa",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  margin-left: ",
            [Function],
            ";
  min-height: 10px;
",
          ],
        },
        "displayName": "styled.div",
        "render": [Function],
        "styledComponentId": "sc-bdVaJa",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    sideBarShown={true}
  >
    <div
      className="c0"
    />
  </StyledComponent>
</styled.div>
`;

exports[`SideBarPageBody component with Header Version Should match snapshot 1`] = `
.c0 {
  margin-left: 0px;
  min-height: 10px;
  margin-top: 56px;
}

<Styled(styled.div)>
  <StyledComponent
    forwardedClass={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": undefined,
        "componentStyle": ComponentStyle {
          "componentId": "sc-bwzfXH",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  margin-left: ",
            [Function],
            ";
  min-height: 10px;
",
            "
  margin-top: 56px;
",
          ],
        },
        "displayName": "Styled(styled.div)",
        "render": [Function],
        "styledComponentId": "sc-bwzfXH",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <div
      className="c0"
    />
  </StyledComponent>
</Styled(styled.div)>
`;
